--- a/Week14/JSX/package.json
+++ b/Week14/JSX/package.json
@@ -1,7 +1,6 @@
 {
   "name": "jsx",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -19,5 +18,6 @@
     "@babel/core": "^7.13.10",
     "@babel/plugin-transform-react-jsx": "^7.12.17",
     "@babel/preset-env": "^7.13.10"
-  }
+  },
+  "description": ""
 }
